--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,13 @@ body {
 
 .callout-container {
     height: 100vh;
+
+    background: url(../images/whiskey-background.jpg) no-repeat bottom right fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 }
 
 .quotes-container {}
