--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ body {
     -o-background-size: cover;
     background-size: cover;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .quotes-container {}
