Made jumbotron transparent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,12 @@ body {
 
 .features-container {}
 
+
 /* Jumbotron */
+
+.jumbotron {
+    background-color: transparent;
+}
 
 .jumbotron-header {
     color: white;
