--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,9 @@ body {
     font-weight: bold;
     margin-bottom: 30px;
 }
+
+.jumbotron small {
+    font-size: 60%;
+    font-style: italic;
+    color: #d0d0d0;
+}
