Add styles to callout divider

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,13 @@ body {
 
 /* Block Dividers */
 
+.block-divider {
+    width: 75px;
+    height: 5px;
+    border: 0;
+    background-color: #f05f40;
+}
+
 /* Jumbotron */
 
 .jumbotron {
