--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,24 @@ body {
     background-color: #f05f40;
 }
 
+/* Navbar */
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.25);
+}
+
 /* Jumbotron */
 
 .jumbotron {
