--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ body {
     background-color: rgba(0,0,0,0.25);
 }
 
+.navbar .navbar-toggler {
+    border: 0;
+}
+
 /* Jumbotron */
 
 .jumbotron {
