--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@ body {
     padding-right: 0;
 }
 
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    background-color: #eec802;
+    border-color: #eec802;
+}
+
 .callout-container {
     height: 100vh;
 
