Add reuseable short divider class and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ body {
     background-color: #f05f40;
 }
 
+.block.divider--short {
+    width: 35px;
+}
+
 /* Navbar */
 
 .navalert-container {
