Add divider to quotes section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,13 +62,14 @@ body {
     width: 75px;
     height: 5px;
     border: 0;
+    background-color: #444;
 }
 
 .block-divider--orange {
     background-color: #f05f40;
 }
 
-.block.divider--short {
+.block-divider--short {
     width: 35px;
 }
 
