Add vertical space between quotes and features section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,13 @@ body {
     width: 35px;
 }
 
+/* Content Containers */
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
 /* Navbar */
 
 .navalert-container {
