Create white coloured divider and create a divider in features section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,10 @@ body {
     background-color: #f05f40;
 }
 
+.block-divider--white {
+    background: white;
+}
+
 .block-divider--short {
     width: 35px;
 }
