--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,3 +165,8 @@ body {
     background-color: #df4929;
     border-color: #df4929;
 }
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
