--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,3 +176,13 @@ body {
     font-size: 45px;
     line-height: 45px;
 }
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 15px;
+    color: #f05f40;
+}
